fix: steppers on mobile

--- a/source/sass/component/_slider.scss
+++ b/source/sass/component/_slider.scss
@@ -142,6 +142,8 @@ $c-slider-max-width: calc(#{$container-width-wide} - #{$c-slider-inset}) !defaul
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 100%;
+    text-align: center;
 
     li {
         display: inline-block;
@@ -171,14 +173,10 @@ $c-slider-max-width: calc(#{$container-width-wide} - #{$c-slider-inset}) !defaul
         cursor: pointer;
         background: $color-gray;
         display: inline-block;
-        width: calc(#{$base} * 1.5);
+        width: calc(#{$base} * 2);
         height: calc(#{$base} * 0.5);
         margin: calc(#{$base} * 0.5);
         border: none;
-
-        @include mq(map_get($breakpoints-map, 'sm')) {
-            width: calc(#{$base} * 2);
-        }
 
         &.c-slider__dot.is-active {
             cursor: default;
